# laniakea

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
rust/: Cargo.toml
rust/bindings/: BoardError.ts  Border.ts  GalaxyCenter.ts  Objective.ts  Position.ts  StateView.ts
rust/src/: lib.rs  main.rs
rust/src/model/: board.rs  board_error.rs  border.rs  galaxy.rs  game_state.rs  grid.rs  history.rs  mod.rs  objective.rs  position.rs  rectangle.rs  solver.rs  state.rs  tree.rs  universe.rs  vec2.rs
src/: App.css  App.module.css  App.tsx  Board.module.css  index.css  main.rs
src/model/: galaxy.rs  position.rs  universe.rs  vec2.rs
