# You must change these to your own details.
[package]
name = "laniakea"
description = "My super awesome Rust, WebAssembly, and Webpack project!"
version = "0.1.0"
authors = ["Simon Olander <simon.olander@gmail.com>"]
categories = ["wasm"]
readme = "../README.md"
edition = "2021"
license = "GPL-3"
repository = "https://github.com/simonolander/laniakea.git"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.13.0"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = "0.1.7"
ordered-float = "5.0.0"
wasm-bindgen = "0.2.100"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
ts-rs = "11.1.0"

[dependencies.web-sys]
version = "0.3.76"
features = ["Window", "Document", "HtmlElement", "MouseEvent"]

# These crates are used for running unit tests.
[dev-dependencies]
proptest = "1.6.0"
approx = "0.5.1"
more-asserts = "0.3.1"
indoc = "2"
